<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hY5-La-qUN">
                                <rect key="frame" x="20" y="58" width="374" height="804"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ssI-Ba-8Bs">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="23.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sff-r2-7Fp" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="338" height="23.5"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mj-xb-dd9" userLabel="Index Label">
                                                <rect key="frame" x="338" y="0.0" width="36" height="23.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GkE-wk-udW" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="55.5" width="374" height="561"/>
                                        <color key="backgroundColor" name="YP White"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="GkE-wk-udW" secondAttribute="height" multiplier="2:3" id="nU3-6k-vbz"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="20"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </imageView>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z1o-M5-XvE">
                                        <rect key="frame" x="0.0" y="648" width="374" height="64"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zbe-Hw-zWJ" userLabel="Question Label">
                                                <rect key="frame" x="20" y="5" width="334" height="54"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="trailing" secondItem="Zbe-Hw-zWJ" secondAttribute="trailing" constant="20" id="CXb-Z6-dmR"/>
                                            <constraint firstAttribute="bottom" secondItem="Zbe-Hw-zWJ" secondAttribute="bottom" constant="5" id="ENe-gc-Abo"/>
                                            <constraint firstItem="Zbe-Hw-zWJ" firstAttribute="top" secondItem="z1o-M5-XvE" secondAttribute="top" constant="5" id="f3Y-MW-HYa"/>
                                            <constraint firstItem="Zbe-Hw-zWJ" firstAttribute="leading" secondItem="z1o-M5-XvE" secondAttribute="leading" constant="20" id="jru-sW-lNS"/>
                                        </constraints>
                                    </view>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ynH-YQ-9yv">
                                        <rect key="frame" x="0.0" y="744" width="374" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jd2-9b-K8m" userLabel="No button">
                                                <rect key="frame" x="0.0" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="tintColor" name="YP Black"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5yJ-yh-xnf"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8x-6I-9lh" userLabel="Yes button">
                                                <rect key="frame" x="197" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="tintColor" name="YP Black"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.CornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="piI-T8-eg7"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="UOZ-7q-1Cp"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="q1U-pr-Wyw">
                                <rect key="frame" x="197" y="438" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="q1U-pr-Wyw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="CMR-34-Db0"/>
                            <constraint firstItem="q1U-pr-Wyw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SuH-q4-Bmb"/>
                            <constraint firstItem="hY5-La-qUN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="eaG-Fq-8NU"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hY5-La-qUN" secondAttribute="trailing" constant="20" id="kLZ-2t-qCC"/>
                            <constraint firstItem="hY5-La-qUN" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="vWh-TC-4sf"/>
                            <constraint firstItem="hY5-La-qUN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zMO-LA-DjK"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="q1U-pr-Wyw" id="DNb-wS-m1E"/>
                        <outlet property="counterLabel" destination="7mj-xb-dd9" id="77Y-oH-fwZ"/>
                        <outlet property="imageView" destination="GkE-wk-udW" id="uNw-8z-UtA"/>
                        <outlet property="noButton" destination="Jd2-9b-K8m" id="bNh-2T-1Oo"/>
                        <outlet property="textLabel" destination="Zbe-Hw-zWJ" id="FAO-zf-WOf"/>
                        <outlet property="yesButton" destination="b8x-6I-9lh" id="BCJ-xT-JBn"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.072463768115945" y="55.580357142857139"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black">
            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
